feat: users and credentials
